快捷键和格式化

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "gist": "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"
+  "gist": "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",
+  "OpneAI": "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"
 }
