--- a/RoslynCat.csproj
+++ b/RoslynCat.csproj
@@ -14,6 +14,7 @@
 	<ItemGroup>
 		<PackageReference Include="Autofac" Version="7.0.0" />
 		<PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
+		<PackageReference Include="Betalgo.OpenAI.GPT3" Version="6.8.3" />
 		<PackageReference Include="Microsoft.CodeAnalysis" Version="4.5.0" />
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.5.0" />
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Features" Version="4.5.0" />
