--- a/src/RolsynCat/RoslynCat.csproj
+++ b/src/RolsynCat/RoslynCat.csproj
@@ -15,6 +15,7 @@
 		<PackageReference Include="Autofac" Version="7.0.0" />
 		<PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
 		<PackageReference Include="Betalgo.OpenAI.GPT3" Version="6.8.3" />
+		<PackageReference Include="Markdig" Version="0.31.0" />
 		<PackageReference Include="Microsoft.CodeAnalysis" Version="4.5.0" />
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.5.0" />
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Features" Version="4.5.0" />
@@ -24,6 +25,10 @@
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.5.0" />
 
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="新文件夹\" />
 	</ItemGroup>
 
 </Project>
