优化代码前保存

--- a/src/RolsynCat/RoslynCat.csproj
+++ b/src/RolsynCat/RoslynCat.csproj
@@ -33,4 +33,12 @@
 	  <Folder Include="新文件夹\" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <EditorConfigFiles Remove="G:\Code\NewCode\RoslynCat\src\RolsynCat\.editorconfig" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Include="G:\Code\NewCode\RoslynCat\src\RolsynCat\.editorconfig" />
+	</ItemGroup>
+
 </Project>
